@@ -7,6 +7,7 @@ package workshop;
 
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
@@ -14,36 +15,23 @@ import java.util.Map;
  *
  * @author user
  */
-public class Question {
-    private final Map<String,List<String>> questions=new HashMap<>();
-
-    public Question() {
-        questions.put("Pop",new ArrayList<>());
-        questions.put("Science",new ArrayList<>());
-        questions.put("Sports",new ArrayList<>());
-        questions.put("Rock",new ArrayList<>());
-    
-    
-    for(int i=0;i<50;i++)
-    {
-        questions.get("Pop").add("Pop Question"+i);
-         questions.get("Science").add("Science Question"+i);
-          questions.get("Sports").add("Sports Question"+i);
-           questions.get("Rock").add("Rock Question"+i);
-    }
-    
+public abstract class Question {
+    LinkedList questionLinkedList;
+    public Question(){
+        questionLinkedList=new LinkedList<>();
+        for(int i=0;i<50;i++)
+        {questionLinkedList.add(createQuestion(i));
 }
     
    
-public String nextquestion(int currentplace)
-{
-switch(currentplace %4){
-    case 0:
-        return questions.get("Pop").remove(0);
-        case 1:
-        return questions.get("Science").remove(0);
-        case 2:
-        return questions.get("Sports").remove(0);
-        default:
-            return questions.get("Rock").remove(0);
-}}}
+}
+
+    public String createQuestion(int index) {
+            return "";
+    }
+    public String removeFirst()
+    {
+    questionLinkedList.removeFirst();
+        return null;
+    }
+}
